<resources>
    <string name="app_name">Hemophilia</string>

    <string name="action_settings">Settings</string>
    <string name="none_medication">None</string>

    <string name="title_activity_main">@string/app_name</string>
    <string name="title_fragment_infusion">@string/infusion</string>
    <string name="title_fragment_bleed">@string/bleed</string>
    <string name="title_activity_add_infusion">Add infusion</string>
    <string name="title_activity_edit_infusion">Edit infusion</string>
    <string name="title_activity_add_bleed">Add bleed</string>
    <string name="title_activity_edit_bleed">Edit bleed</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="infusion">Infusion</string>
    <string name="bleed">Bleed</string>
    <string name="bleed_reason">Reason</string>
    <string name="bleed_reason_injury">Injury</string>
    <string name="bleed_reason_spontaneous">Spontaneous</string>
    <string name="bleed_severity">Severity</string>
    <string name="bleed_severity_mild">Mild</string>
    <string name="bleed_severity_moderate">Moderate</string>
    <string name="bleed_severity_severe">Severe</string>

    <string name="dose">Dose</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="description">Description</string>
    <string name="time_string" translatable="false">%1$s:%2$s</string>
    <string name="date_string" translatable="false">%1$s/%2$s/%3$s</string>
    <string name="select_time">Select time</string>
    <string name="select_date">Select date</string>
    <string name="lot_number">Lot number</string>
    <string name="save">Save</string>


    <string name="ankle_left">Ankle (left)</string>
    <string name="ankle_right">Ankle (right)</string>
    <string name="arm_left">Arm (left)</string>
    <string name="arm_right">Arm (right)</string>
    <string name="back">Back</string>
    <string name="chest">Chest</string>
    <string name="ear">Ear</string>
    <string name="elbow_left">Elbow (left)</string>
    <string name="elbow_right">Elbow (right)</string>
    <string name="finger">Finger</string>
    <string name="foot_left">Foot (left)</string>
    <string name="foot_right">Foot (right)</string>
    <string name="forearm_left">Forearm (left)</string>
    <string name="forearm_right">Forearm (right)</string>
    <string name="hand_left">Hand (left)</string>
    <string name="hand_right">Hand (right)</string>
    <string name="head">Head</string>
    <string name="hip_left">Hip (left)</string>
    <string name="hip_right">Hip (right)</string>
    <string name="knee_left">Knee (left)</string>
    <string name="knee_right">Knee (right)</string>
    <string name="leg_left">Leg (left)</string>
    <string name="leg_right">Leg (right)</string>
    <string name="mouth">Mouth</string>
    <string name="nose">Nose</string>
    <string name="psoas_left">Psoas (left)</string>
    <string name="psoas_right">Psoas (right)</string>
    <string name="other_bodypart">Other</string>
    <string name="shoulder_left">Shoulder (left)</string>
    <string name="shoulder_right">Shoulder (right)</string>
    <string name="stomach">Stomach</string>
    <string name="thigh_left">Thigh (left)</string>
    <string name="thigh_right">Thigh (right)</string>
    <string name="thumb_left">Thumb (left)</string>
    <string name="thumb_right">Thumb (right)</string>
    <string name="toe">Toe</string>
    <string name="wrist_left">Wrist (left)</string>
    <string name="wrist_right">Wrist (right)</string>
    <string name="error_invalid_dose">Invalid dose</string>
    <string name="error_invalid_lot_number">Invalid lot number</string>
    <string name="error_invalid_description">Invalid description</string>
    <string name="item_saved">%1$s saved</string>
    <string name="error_item_not_saved">Error: %1$s not saved</string>
    <string name="delete">Delete</string>
    <string name="ask_delete_infusion">Do you want to delete this infusion?</string>
    <string name="ask_delete_bleed">Do you want to delete this bleed?</string>
    <string name="item_deleted">%1$s deleted</string>
    <string name="reminder">Reminder</string>
    <string name="title_fragment_reminder">Reminder</string>

</resources>
