<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="us.idinfor.hemophilia.activity.EditInfusionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/toolbar"/>

        <include layout="@layout/progress_bar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/narrow_space">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_action_infusion"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100">

                <Spinner
                    android:id="@+id/medicationSpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left_margin_list_after_icon"
                    android:layout_marginStart="@dimen/left_margin_list_after_icon"
                    android:entries="@array/medication_list"
                    android:layout_weight="70"/>

                    <EditText
                        android:id="@+id/doseEdit"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="30"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:hint="@string/dose"
                        android:inputType="number"
                        android:background="@android:color/transparent"/>

            </LinearLayout>




        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider"
            android:layout_marginLeft="@dimen/left_margin_list"
            android:layout_marginStart="@dimen/left_margin_list"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/mid_space"
            android:layout_marginBottom="@dimen/mid_space">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_lot_number_24dp"/>

                <EditText
                    android:id="@+id/lotNumberEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left_margin_list_after_icon"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:hint="@string/lot_number"
                    android:inputType="text"
                    android:maxLines="1"
                    android:background="@android:color/transparent"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider"
            android:layout_marginLeft="@dimen/left_margin_list"
            android:layout_marginStart="@dimen/left_margin_list"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/mid_space"
            android:layout_marginBottom="@dimen/mid_space">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_calendar_24dp"/>

            <TextView
                android:id="@+id/dateTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/left_margin_list_after_icon"
                android:layout_marginStart="@dimen/left_margin_list_after_icon"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:clickable="true"
                android:background="?selectableItemBackground"
                android:text="@string/select_date"/>

            <TextView
                android:id="@+id/timeTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/wide_space"
                android:layout_marginStart="@dimen/wide_space"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:clickable="true"
                android:background="?selectableItemBackground"
                android:text="@string/select_time"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider"
            android:layout_marginLeft="@dimen/left_margin_list"
            android:layout_marginStart="@dimen/left_margin_list"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/mid_space"
            android:layout_marginBottom="@dimen/mid_space">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_description_24dp"/>

            <EditText
                android:id="@+id/descriptionEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/left_margin_list_after_icon"
                android:layout_marginStart="@dimen/left_margin_list_after_icon"
                android:inputType="textMultiLine"
                android:hint="@string/description"
                android:background="@android:color/transparent"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
